# cargo-v5

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  armv7a-vex-v5.json  build.rs  derivation.nix  dist-workspace.toml  flake.nix  garnix.yaml  shell.nix  update-template.sh
.devcontainer/: devcontainer.json
.github/: build-setup.yml
.github/workflows/: deploy.yml  release.yml  rust.yml
src/: config.rs  connection.rs  errors.rs  lib.rs  main.rs  manifest.rs  metadata.rs  self_update.rs  settings.rs
src/commands/: build.rs  cat.rs  completions.rs  devices.rs  dir.rs  field_control.rs  key_value.rs  log.rs  mod.rs  new.rs  rm.rs  screenshot.rs  simulator.rs  terminal.rs  toolchain.rs  upgrade.rs  upload.rs
src/commands/field_control/: mod.rs  widgets.rs
src/commands/migrate/: mod.rs  source_code.rs
src/commands/upgrade/: editor.rs  mod.rs  source_code.rs  vfs.rs
src/targets/: armv7a-vex-v5.json
