[package]
name = "cargo-v5"
version = "0.10.4"
edition = "2021"
authors = [
    "vexide",
    "Gavin Niederman <gavinniederman@gmail.com>",
    "doinkythederp <doinkythederp@icloud.com>",
    "Tropical",
]
license = "MIT"
description = "A cargo subcommand for managing V5 Brain Rust projects"
repository = "https://github.com/vexide/cargo-pros"

[package.metadata.v5]
icon = "robot"
slot = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-subcommand-metadata = "0.1.0"
cargo_metadata = "0.18.0"
clap = { version = "4.5.20", features = ["derive"], optional = true }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
fs-err = { version = "3.0.0", features = ["tokio"] }
cfg-if = "1.0.0"
inquire = "0.7.5"
indicatif = "0.17.8"
vex-v5-serial = { version = "0.3.3", default-features = false, features = [
    "serial",
] }
tokio = { version = "1.41.0", features = ["full"] }
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.65"
object = { version = "0.36.5", default-features = false, features = [
    "std",
    "read_core",
    "elf",
] }

ratatui = { version = "0.29.0", optional = true }
crossterm = { version = "0.28.1", optional = true }
tui-term = { version = "0.2.0", optional = true }
directories = { version = "5.0.1", optional = true }

reqwest = { version = "0.12.9", optional = true, default-features = false, features = ["rustls-tls"] }
flate2 = "1.0.34"
tar = "0.4.26"
flexi_logger = "0.29.6"
log = "0.4.22"
chrono = "0.4.38"
tabwriter = { version = "1.4.0", features = ["ansi_formatting"] }
humansize = "2.1.3"
image = { version = "0.25.1", default-features = false, features = ["png"] }
bidiff = "1.0.0"
serde_ini = "0.2.0"

[features]
default = ["clap", "fetch-template"]
clap = ["dep:clap"]

field-control = ["dep:ratatui", "dep:crossterm", "dep:tui-term"]
fetch-template = ["dep:reqwest", "dep:directories"]

full = ["field-control", "fetch-template"]

[[bin]]
name = "cargo-v5"
required-features = ["clap"]
